syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.github.poad.example.grpc";
option java_outer_classname = "Hello";
option objc_class_prefix = "HLW";

package hello;


// The greeting service definition.
service Greeter {
    // Sends a greeting
    rpc SayHello (HelloRequest) returns (HelloReply) {}
}

// The request message containing the user's name.
message HelloRequest {
    string name = 1;
}

// The response message containing the greetings
message HelloReply {
    string message = 1;
}
