syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.github.poad.example.grpc";
option java_outer_classname = "MessageProto";
option objc_class_prefix = "MSG";

package message;

message UUIDEntity {
    string value = 1;
}

message GenerateUUIDRequest {

}

message MessageEntity {
    UUIDEntity id = 1;
    string message = 2;
}

message GetMessageRequest {
    UUIDEntity id = 1;
}

message GetMessagesRequest {

}

message DeleteMessagesRequest {
}

message DeleteMessageRequest {
    UUIDEntity id = 1;
}

message CountMessagesRequest {

}

message MessageCount {
    int64 count = 1;
}

message DeleteMessagesResponse {}

message MessagesResponse {
    repeated MessageEntity messages = 1;
}

service UUIDGenerator {
    rpc GenerateUUID(GenerateUUIDRequest) returns (UUIDEntity) {}
}

service Messenger {
    rpc GetMessage(GetMessageRequest) returns (MessageEntity) {}

    rpc ListMessages(GetMessagesRequest) returns (MessagesResponse) {}

    rpc PutMessage(MessageEntity) returns (MessageEntity) {}

    rpc DeleteMessage(DeleteMessageRequest) returns (MessageEntity) {}

    rpc DeleteMessages(DeleteMessagesRequest) returns (DeleteMessagesResponse) {}

    rpc CountMessages(CountMessagesRequest) returns (MessageCount) {}
}
